--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,7 +1,8 @@
 {
+    "version": 2,
     "rewrites": [
         {
-            "src": "/(.*)",
+            "source": "/(.*)",
             "destination": "/api"
         }
     ]
