--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "backend",
+  "name": "mongodb",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines": {
-    "node": "14.x"
-  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node index.js",
-    "vercel-build": "echo heloo"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^8.2.0"
+    "ioredis": "^5.3.2",
+    "mongoose": "^6.10.1"
   }
 }
