--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "mongodb",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "main": "server.js",
+  "engines": {
+    "node": "14.x"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node server.js",
+    "vercel-build": "echo heloo"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "ioredis": "^5.3.2",
-    "mongoose": "^6.10.1"
+    "mongoose": "^8.2.0"
   }
 }
