--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -2,19 +2,13 @@
     "version": 2,
     "builds": [
         {
-            "src": "./index.js",
+            "src": "./server.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
-        }
-    ],
-    "rewrites": [
-        {
-            "source": "/(.*)",
             "destination": "/"
         }
     ]
