--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -8,7 +8,7 @@
     ],
     "routes": [
         {
-            "src": "/",
+            "src": "./index.js",
             "dest": "/"
         }
     ]
