--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,15 +1,9 @@
 {
     "version": 2,
-    "builds": [
+    "rewrites": [
         {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "./index.js",
-            "dest": "/"
+            "source": "/(.*)",
+            "destination": "/api"
         }
     ]
 }
